--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,7 +14,7 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-17 Sun 20:52]
+#+CAPTION: Clock summary at [2017-09-18 Mon 00:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
@@ -23,7 +23,7 @@
 | Stories                                                                     | 59:18   |       |       | 100.0 |
 | Active                                                                      |         | 59:18 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:44 |   1.2 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:43 |   2.9 |
+| COMPLETED Sprint and product backlog grooming                               |         |       |  1:43 |   2.9 |
 | COMPLETED Remove object types in yarn                                       |         |       |  0:52 |   1.5 |
 | COMPLETED Clean-up readme                                                   |         |       |  1:15 |   2.1 |
 | COMPLETED Rename transformers to adapters                                   |         |       |  0:28 |   0.8 |
@@ -48,7 +48,7 @@
 | COMPLETED Untabify windows templates                                        |         |       |  0:04 |   0.1 |
 | COMPLETED Output stats in org-mode format                                   |         |       |  0:40 |   1.1 |
 | COMPLETED Split out transforms from post-processing chain                   |         |       |  4:19 |   7.3 |
-| STARTED Move enablement into yarn                                           |         |       |  4:50 |   8.2 |
+| POSTPONED Move enablement into yarn                                         |         |       |  4:50 |   8.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -114,7 +114,8 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6308906359798657024/][LinkedIn]]
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
-*** STARTED Sprint and product backlog grooming                       :story:
+*** COMPLETED Sprint and product backlog grooming                     :story:
+    CLOSED: [2017-09-18 Mon 00:04]
     CLOCK: [2017-09-15 Fri 18:40]--[2017-09-15 Fri 18:50] =>  0:10
     CLOCK: [2017-09-10 Sun 00:19]--[2017-09-10 Sun 00:30] =>  0:11
     CLOCK: [2017-09-08 Fri 13:45]--[2017-09-08 Fri 13:53] =>  0:08
@@ -959,7 +960,8 @@ Tasks:
 - generability
 - model to text rename
 
-*** STARTED Move enablement into yarn                                 :story:
+*** POSTPONED Move enablement into yarn                               :story:
+    CLOSED: [2017-09-18 Mon 00:04]
     CLOCK: [2017-09-16 Sat 20:50]--[2017-09-16 Sat 21:01] =>  0:11
     CLOCK: [2017-09-16 Sat 17:43]--[2017-09-16 Sat 18:17] =>  0:34
     CLOCK: [2017-09-16 Sat 15:42]--[2017-09-16 Sat 16:53] =>  1:11
@@ -1025,378 +1027,6 @@ We need to make use of the exact same logic as implemented in
 =quilt.cpp= for enablement. Perhaps all of the enablement related
 functionality can be lifted and grafted onto quilt without any major
 changes.
-
-*** Tidy-up assistant API                                             :story:
-
-Now we have element in assistant we can start removing the need for
-element in the calls, making the templates simpler.
-
-*** Facets incompatible with standards                                :story:
-
-Some facets may not be supported for all settings of a language. For
-example the hash facet is not compatible with C++ 98. We need to have
-some kind of facet/formatter level validation for this.
-
-*** Handcrafted templates                                             :story:
-
-At present we generate constructors, swap, etc. for handcrafted
-classes. Ideally users should be able to create a profile that enables
-the things they want to see on a template and then associate it with a
-stereotype. For this we will need aspect support.
-
-*** Drop the original extension in tailor                             :story:
-
-Filenames in tailor look weird:
-
-: dart.dia.json
-
-it should just be:
-
-: dart.json
-
-*** Move dependencies into yarn                                       :story:
-
-Actually the dependencies will be generated at the kernel level
-because 99% of the code is kernel specific. However, we need to make
-it an external transform.
-
-Tasks:
-
-- create the locator in the C++ external transform
-- create a dependencies transform that uses the existing include
-  generation code.
-
-*Previous understanding*
-
-It seems all languages we support have some form of "dependencies":
-
-- in c++ these are the includes
-- in c# these are the usings
-- in java these are the imports
-
-So, it would make sense to move these into yarn. The process of
-obtaining the dependencies must still be done in a kernel dependent
-way because we need to build any language-specific structures that the
-dependencies builder requires. However, we can create an interface for
-the dependencies builder in yarn and implement it in each kernel. Each
-kernel must also supply a factory for the builders.
-
-*** Consider folding quilt into yarn                                  :story:
-
-In the far distant future, when we finally finish merging all the
-quilt specific stuff into yarn (e.g. formattables), it actually makes
-sense to deprecate quilt as a concept. Yarn then becomes the central
-point, and frontends and backends are just implementations that hook
-into it. Thus we then have simply =yarn.cpp= and =yarn.csharp=.
-
-However, there is still a concept that needs to be captured: the
-kernel. That is, a set of backends that work together to provide some
-kind of "service". In quilt's case the basic type definitions. We
-could potentially want to implement other backends that are totally
-distinct from quilt. However, we still do not have a concrete use case
-for this. Thus it may make more sense to just fold now and worry about
-these more flexible use cases when they arrive. We can always rename.
-
-*** Use element ids for associations                                  :story:
-
-There doesn't seem a need for having entire names for associations;
-these are used to find information by ID anyway. We should try to
-convert them to element id's instead and see what breaks.
-
-- transparent, opaque associations
-- base, derived visitor
-- contained by
-
-We can't do this for:
-
-- visitor: we use the name in the formatter.
-
-*** Code-generate annotations type templates                          :story:
-
-Tasks:
-
-- create a meta-model element for type templates. Add container in
-  exomodel for it. Name: =yarn::annotation_type_template=?
-- add frontend support for the type template element.
-- add a transform that reads all the meta-data from type templates and
-  populates the yarn element of the type template. Add this transform
-  to the exomodel transforms, at the end of the chain (e.g. after
-  annotations).
-- create a meta-model element for the initialiser of type templates,
-  made up of all type templates in the model. Add a container of
-  initialiser in endomodel.
-- add a transform that moves all of the type templates into the
-  initialiser. This can be done as part of the exomodel to endomodel
-  transform. Or maybe we should have a stand alone transform, and the
-  final transform simply ignores type templates.
-- create a registrar in annotations that registers type templates.
-- create a stitch template for the initialiser, taking the registrar
-  as an argument, and registering all type templates.
-- add all type templates to all models, and generate the type
-  initialisers.
-- hook the type initialisers to the initialisers.
-- change type group repository to initialise from the registrar.
-- delete all type groups JSON and hydrator and related code.
-
-Merged stories:
-
-*Initialisation of meta-data*
-
-At present we are reading meta-data files for every transformation. In
-reality, it makes no sense to allow the meta-data files to change
-dynamically, because the consumers of the meta-data are hard-coded. So
-it would make more sense to treat them as a initialisation step. This
-will make even more sense when we code-generate the types instead of
-using JSON. Then we can hook up the generated code to the
-initialisers.
-
-*** Cannot make qualified references to concepts                      :story:
-
-At present it is not possible to consume concepts defined in a
-referenced model, nor is it possible to refer to a concept in a
-different module from the module in which the element is in, e.g.: say
-concept C0 is declared in module M0; all types of M0 can have C0 as
-stereotype and that will resolve. However any types on any other
-module cannot see the concept.
-
-One suggestion is to allow scoped names in stereotypes:
-=module::Concept=.
-
-The heuristic for concept resolution is then:
-
-- external modules are never part of the scoped name;
-- on a scoped concept with M names, we first start by assuming that
-  the first name is the model module and M-2 is/are the internal
-  module(s). We try this for all names in M-2, e.g. first two names
-  are model modules and M-3 names are internal modules and so forth.
-
-*** Add support for object templates that work cross-model            :story:
-
-We've implemented support for cross-model inheritance in sprint 87 but
-we did not cover object templates. Most of the approach is the same,
-but unfortunately we can't just reuse it.
-
-Tasks:
-
-- we need a refines field which is a text collection.
-- we need refinement settings, factory etc.
-- update parsing expander.
-
-*** Move formatting styles into yarn                                  :story:
-
-We need to support the formatting styles at the meta-model level.
-
-*** Throw on unsupported stereotypes                                  :story:
-
-In some cases we may support a feature in one language but not on
-others like say ORM at present. If a user requests ORM in a C# model,
-we should throw.
-
-If we are in compatibility mode, however, we should not throw.
-
-Note that we are already throwing if a stereotype is totally
-unknown. The problem here is that the stereotype is known, but not
-supported for all kernels. This is a bit trickier.
-
-We also need to check the existing code in stereotypes transform to
-stop trowing if compatibility flag is on.
-
-*** Change order of includes according to Lakos major design rule     :story:
-
-Lakos says:
-
-#+begin_quote
-The .c file of every component should include its own .h file as the
-first substantive line of code.
-#+end_quote
-
-We decided to include it as the last line. However, Lakos approach has
-the side-effect of automatically detecting headers that are missing
-includes. We used to do this manually by generating =.cpp= files that
-just included the header but then had to remove it because it was
-slowing down compilation. With Lakos approach we get the best of both
-worlds.
-
-We need to also update the generated code to follow this
-approach. This will require some thinking.
-
-*** Move element segmentation into yarn                               :story:
-
-We've added the notion that an element can be composed of other
-elements in quilt, in order to handle forward declarations. However,
-with a little bit of effort we can generalise it into yarn. It would
-be useful for other things such as inner classes. We don't need to
-actually implement inner classes right now but we should make sure the
-moving of this feature into yarn is compatible with it.
-
-Notes:
-
-- seems like we have two use cases: a) we need all elements, master
-  and extensions and we don't really care about which is which. b) we
-  only want masters. However, we must be able to access the same
-  element properties from either the master or the extension. Having
-  said all that, it seems we don't really need all of the element
-  properties for both - forward declarations probably only need:
-  decoration and artefact properties.
-- we don't seem to use the map in formattables model anywhere, other
-  than to find master/extension elements.
-- Yarn model could have two simple list containers (masters and
-  all). Or maybe we don't even need this to start off with, we can
-  just iterate and skip extensions where required.
-- so in conclusion, we to move decoration, enablement and dependencies
-  into yarn (basically decoration and artefact properties) first and
-  then see where segmentation ends.
-
-Tasks:
-
-- add a concept for element extensions: =Extensible=. Contains a list
-  of element pointers.
-- populate it with the extensions.
-- change enablement to merge all element properties of extensible
-  elements.
-
-*** Create a yarn locator                                             :story:
-
-We need to move all functionality which is not kernel specific into
-yarn for the locator. This will exist in the helpers namespace. We
-then need to implement the C++ locator as a composite of yarn
-locator. It will live in fabric.
-
-*Other Notes*
-
-At present we have multiple calls in locator, which are a bit
-ad-hoc. We could potentially create a pattern. Say for C++, we have
-the following parameters:
-
-- relative or full path
-- include or implementation: this is simultaneously used to determine
-  the placement (below) and the extension.
-- meta-model element:
-- "placement": top-level project directory, source directory or
-  "natural" location inside of facet.
-- archetype location: used to determine the facet and archetype
-  postfixes.
-
-E.g.:
-
-: make_full_path_for_enumeration_implementation
-
-Interestingly, the "placement" is a function of the archetype location
-(a given artefact has a fixed placement). So a naive approach to this
-seems to imply one could create a data driven locator, that works for
-all languages if supplied suitable configuration data. To generalise:
-
-- project directory is common to all languages.
-- source or include directories become "project
-  sub-directories". There is a mapping between the artefact location
-  and a project sub-directory.
-- there is a mapping between the artefact location and the facet and
-  artefact postfixes.
-- extensions are a slight complication: a) we want to allow users to
-  override header/implementation extensions, but to do it so for the
-  entire project (except maybe for ODB files). However, what yarn's
-  locator needs is a mapping of artefact location to  extension. It
-  would be a tad cumbersome to have to specify extensions one artefact
-  location at a time. So someone has to read a kernel level
-  configuration parameter with the artefact extensions and expand it
-  to the required mappings. Whilst dealing with this we also have the
-  issue of elements which have extension in their names such as visual
-  studio projects and solutions. The correct solution is to implement
-  these using element extensions, and to remove the extension from the
-  element name.
-- each kernel can supply its configuration to yarn's locator via the
-  kernel interface. This is fairly static so it can be supplied early
-  on during initialisation.
-- there is still something not quite right. We are performing a
-  mapping between some logical space (the modeling space) and the
-  physical space (paths in the filesystem). Some modeling elements
-  such as the various CMakeLists.txt do not have enough information at
-  the logical level to tell us about their location; at present the
-  formatter itself gives us this hint ("include cmakelists" or "source
-  cmakelists"?). It would be annoying to have to split these into
-  multiple archetypes just so we can have a function between the
-  archetype location and the physical space. Although, if this is the
-  only case of a modeling element not mapping uniquely, perhaps we
-  should do exactly this.
-- However, we still have inclusion paths to worry about. As we done
-  with the source/include directories, we need to somehow create a
-  concept of inclusion path which is not language specific; "relative
-  path" and "requires relative path" perhaps? These could be a
-  function of archetype location.
-
-*** Generate file paths as a transform                                :story:
-
-Add a fabric transform for file path generation.
-
-*** Add a modeline to stitch                                          :story:
-
-It would be nice to be able to supply the mode and other emacs
-properties to stitch templates. For that we just need a special KVP
-used at the top that contains the modeline:
-
-: <#@ modeline="-*- mode: poly-stitch; tab-width: 4; indent-tabs-mode: nil; -*-" #>
-
-Stitch can read this KVP and ignore it.
-
-*** Create "opaque" kernel and element properties                     :story:
-
-As part of the element container, we can have a set of base classes
-that are empty: =opaque_element_properties=. This class is then
-specialised in each kernel with the properties that are specific to
-it. We probably need an equivalent for:
-
-- kernel level properties
-- element level properties
-- attribute level properties.
-
-We then have to do a lot of casting in the helpers.
-
-Once we got these opaque properties, we can then create "kernel
-specific expanders" which are passed in to the yarn workflow. These
-populate the opaque properties.
-
-*** Move helpers into yarn                                            :story:
-
-Looking at helpers, it is clear that they are common to all
-languages. We just need to rename the terminology slightly -
-particularly wrt to streaming properties - and then move this code
-across into yarn.
-
-*** Move facet properties into yarn                                   :story:
-
-We should be able to handle these generically in yarn.
-
-*** Move ORM camel-case and databases into yarn                       :story:
-
-We should handle this property at the ORM level, rather than at the
-ODB level.
-
-Similarly, we should move the ODB databases into yarn and make that a
-ORM-level concept.
-
-*** Distinguish between meta-types that require canonical archetypes  :story:
-
-At present it is not possible to know which meta-types require
-canonical archetypes and which don't. In the validation we said:
-
-:         * We must have one canonical formatter per type per facet.
-:         * FIXME: this check is broken at the moment because this is
-:         * only applicable to yarn types, not fabric types. It is also
-:         * not applicable to forward declarations. We need some
-:         * additional information from yarn to be able to figure out
-:         * which types must have a canonical archetype.
-
-We should have some kind of flag in yarn to distinguish. This still
-requires a bit of thinking.
-
-*** Tidy-up of inclusion terminology                                  :story:
-
-Random notes:
-
-- imports and exports
-- some types support both (headers)
-- some support imports only (cpp)
-- some support neither (cmakelists, etc).
 
 ** Deprecated
 *** CANCELLED Make the Zeta model compilable                          :story:
