--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-29 Fri 11:39]
+#+CAPTION: Clock summary at [2017-09-29 Fri 12:13]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *15:49* |       |      | 100.0 |
+| *Total time*                                                                | *16:22* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 15:49   |       |      | 100.0 |
-| Active                                                                      |         | 15:49 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  14.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:38 |   4.0 |
-| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   1.1 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   6.4 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  12.9 |
-| STARTED Rename top-level transformations                                    |         |       | 1:17 |   8.1 |
-| STARTED Create the archetype location properties                            |         |       | 1:53 |  11.9 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  41.0 |
+| Stories                                                                     | 16:22   |       |      | 100.0 |
+| Active                                                                      |         | 16:22 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |  14.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:38 |   3.9 |
+| CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   1.0 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   6.2 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |  12.4 |
+| STARTED Rename top-level transformations                                    |         |       | 1:17 |   7.8 |
+| STARTED Create the archetype location properties                            |         |       | 2:26 |  14.9 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  39.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -310,6 +310,7 @@ Tasks:
 - remove code-generation, create a transform for it.
 
 *** STARTED Create the archetype location properties                  :story:
+    CLOCK: [2017-09-29 Fri 11:40]--[2017-09-29 Fri 12:13] =>  0:33
     CLOCK: [2017-09-29 Fri 11:17]--[2017-09-29 Fri 11:39] =>  0:22
     CLOCK: [2017-09-29 Fri 11:15]--[2017-09-29 Fri 11:16] =>  0:01
     CLOCK: [2017-09-22 Fri 13:58]--[2017-09-22 Fri 14:07] =>  0:09
