--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-08 Sun 14:51]
+#+CAPTION: Clock summary at [2017-10-08 Sun 15:39]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *24:19* |       |      | 100.0 |
+| *Total time*                                                                | *25:05* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 24:19   |       |      | 100.0 |
-| Active                                                                      |         | 24:19 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   9.5 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   3.1 |
+| Stories                                                                     | 25:05   |       |      | 100.0 |
+| Active                                                                      |         | 25:05 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   9.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   3.0 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.7 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   4.2 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   8.4 |
-| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   6.4 |
-| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.6 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   8.6 |
-| COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   2.0 |
-| COMPLETED Rename kernel and family                                          |         |       | 2:44 |  11.2 |
-| STARTED Create the archetype location properties                            |         |       | 4:04 |  16.7 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  26.7 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   4.1 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   8.1 |
+| COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   6.2 |
+| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.5 |
+| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   8.3 |
+| COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.9 |
+| COMPLETED Rename kernel and family                                          |         |       | 2:44 |  10.9 |
+| STARTED Create the archetype location properties                            |         |       | 4:50 |  19.3 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  25.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -379,6 +379,7 @@ location. So we need to:
 - rename archetype location group to archetype location family.
 
 *** STARTED Create the archetype location properties                  :story:
+    CLOCK: [2017-10-08 Sun 14:52]--[2017-10-08 Sun 15:38] =>  0:46
     CLOCK: [2017-10-08 Sun 14:12]--[2017-10-08 Sun 14:51] =>  0:39
     CLOCK: [2017-10-06 Fri 10:09]--[2017-10-06 Fri 10:52] =>  0:43
     CLOCK: [2017-10-05 Thu 07:15]--[2017-10-05 Thu 07:20] =>  0:05
