--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,27 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-10-08 Sun 16:19]
+#+CAPTION: Clock summary at [2017-10-08 Sun 16:34]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *25:42* |       |      | 100.0 |
+| *Total time*                                                                | *25:59* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 25:42   |       |      | 100.0 |
-| Active                                                                      |         | 25:42 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   9.0 |
+| Stories                                                                     | 25:59   |       |      | 100.0 |
+| Active                                                                      |         | 25:59 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 2:19 |   8.9 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:45 |   2.9 |
 | CANCELLED Add an "at" field to transform stats                              |         |       | 0:10 |   0.6 |
-| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   4.0 |
-| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   7.9 |
+| COMPLETED Move enablement into yarn                                         |         |       | 1:01 |   3.9 |
+| COMPLETED Consider revamping the project logo                               |         |       | 2:02 |   7.8 |
 | COMPLETED Rename top-level transformations                                  |         |       | 1:33 |   6.0 |
-| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.5 |
-| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   8.1 |
+| COMPLETED Clean-up context usage                                            |         |       | 0:38 |   2.4 |
+| COMPLETED Housekeeper should know of text models                            |         |       | 2:05 |   8.0 |
 | COMPLETED Rename the model to text transforms                               |         |       | 0:29 |   1.9 |
-| COMPLETED Rename kernel and family                                          |         |       | 2:44 |  10.6 |
-| STARTED Clean up formatter names                                            |         |       | 0:37 |   2.4 |
-| STARTED Create the archetype location properties                            |         |       | 4:50 |  18.8 |
-| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  25.2 |
+| COMPLETED Rename kernel and family                                          |         |       | 2:44 |  10.5 |
+| STARTED Clean up formatter names                                            |         |       | 0:54 |   3.5 |
+| STARTED Create the archetype location properties                            |         |       | 4:50 |  18.6 |
+| STARTED Generate file paths as a transform                                  |         |       | 6:29 |  25.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -380,6 +380,7 @@ location. So we need to:
 - rename archetype location group to archetype location family.
 
 *** STARTED Clean up formatter names                                  :story:
+    CLOCK: [2017-10-08 Sun 16:17]--[2017-10-08 Sun 16:34] =>  0:17
     CLOCK: [2017-10-08 Sun 15:39]--[2017-10-08 Sun 16:16] =>  0:37
 
 At present we have confusing terminology in formatters:
